Toggle the pagelist visibility via CSS to avoid a crash when the index update is done before the element exists.
Also only send the If-Modified-Since HTTP header when we have something significant to send.

--- a/css/style.css
+++ b/css/style.css
@@ -363,7 +363,8 @@ a[href="javascript:;"] {
 }
 
 /* Index */
-:root.index-loading .board {
+:root.index-loading .board,
+:root.index-hide-pagelist .pagelist {
   display: none;
 }
 
